--- a/public/index.html
+++ b/public/index.html
@@ -21,4 +21,7 @@
         <div id="app"></div>
         <!-- built files will be auto injected -->
     </body>
+    <!-- Webchat默认功能代码: 开始-->
+<script language="javascript" src="https://myquick.y2ss.com/chat/chatClient/monitor.js?jid=7651687265&companyID=5029118&configID=18446&codeType=custom&ss=1"></script>
+<!-- Webchat默认功能代码: 结束-->
 </html>
