--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         minimum-scale=1.0, user-scalable=no"
         />
         <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-        <title>ricci_test</title>
+        <title>奥德赛-专业彩票娱乐</title>
     </head>
     <body>
         <noscript>
